--- a/my-course.html
+++ b/my-course.html
@@ -14,7 +14,7 @@
     <div class="main">
         <ul>
             <li><a href="profile.html"> Profile </a></li>
-            <li><a href="#"> About me</a></li>
+            <li><a href="#"> Experiences </a></li>
             <li><a href="socialmedia.html"> social media </a></li>
             <li class="active"><a href="#"> My course</a></li>
         </ul>
