--- a/socialmedia.html
+++ b/socialmedia.html
@@ -27,7 +27,7 @@
     <div class="main">
         <ul>
             <li><a href="profile.html"> Profile </a></li>
-            <li><a href="#"> About me</a></li>
+            <li><a href="#"> Experiences </a></li>
             <li class="active"><a href="#"> social media </a></li>
             <li><a href="my-course.html">My course</a></li>
         </ul>
