--- a/profile.html
+++ b/profile.html
@@ -60,6 +60,15 @@
             </div>
         </section>
 
+        <div class="socialmedia">
+            <div class="github">
+            <a href="#"><img src="assets/Github.png" alt="Github"></a>
+            </div>
+            <div class="linkedin">
+            <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile&lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_top_card%3B78zdAwJ6RRmBMuYCNacFPw%3D%3D"><img src="assets/linkedin.png" alt="Linkedin"></a>
+            </div>
+        </div>
+
     </header>
 </body>
 </html>
